edits to jupyter notes

--- a/swc-1.ipynb
+++ b/swc-1.ipynb
@@ -2,21 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "132.22000000000003\n",
+      "inflam_001\n",
+      "inflam_001 weight in kilograms: 60.1\n",
+      "weight in pounds: 132.22000000000003\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_kg = 60.1\n",
+    "patient_id = \"001\"\n",
+    "weight_lb = 2.2 * weight_kg\n",
+    "patient_id = \"inflam_\" + patient_id\n",
+    "print(weight_lb)\n",
+    "print(patient_id)\n",
+    "print(patient_id, \"weight in kilograms:\", weight_kg)\n",
+    "print('weight in pounds:', 2.2 * weight_kg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(60.3))\n",
+    "print(type(patient_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95.0\n",
+      "102\n"
+     ]
+    }
+   ],
+   "source": [
+    "mass = 47.5\n",
+    "age = 122\n",
+    "mass = mass * 2.0 \n",
+    "age = age - 20\n",
+    "print(mass)\n",
+    "print(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hopper Grace\n"
+     ]
+    }
+   ],
+   "source": [
+    "first, second = 'Grace', 'Hopper'\n",
+    "third, fourth = second, first\n",
+    "print(third, fourth)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda1",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
