min, max and std dev

--- a/analyse-patient-data.ipynb
+++ b/analyse-patient-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,26 +85,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.14875\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Analysing data \n",
-    "\n",
-    "# find the average inflammation for all patients on all days\n",
-    "print(numpy.mean(data))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -120,6 +100,35 @@
     "# Example of a function that doesn't have any input/arguments\n",
     "import time\n",
     "print(time.ctime())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.14875\n",
+      "maximum inflammation: 20.0\n",
+      "minimum inflammation: 0.0\n",
+      "standard deviation: 4.613833197118566\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Analysing data \n",
+    "\n",
+    "# find the average inflammation for all patients on all days\n",
+    "print(numpy.mean(data))\n",
+    "\n",
+    "# find maximum, minimum, and standard devation and define them as objects\n",
+    "maxval, minval, stdval = numpy.amax(data), numpy.amin(data), numpy.std(data)\n",
+    "print('maximum inflammation:', maxval)\n",
+    "print('minimum inflammation:', minval)\n",
+    "print('standard deviation:', stdval)\n"
    ]
   }
  ],
