progress on analysing patient data

--- a/analyse-patient-data.ipynb
+++ b/analyse-patient-data.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,23 @@
       "6.14875\n",
       "maximum inflammation: 20.0\n",
       "minimum inflammation: 0.0\n",
-      "standard deviation: 4.613833197118566\n"
+      "standard deviation: 4.613833197118566\n",
+      "maximum inflammation for patient 0: 18.0\n",
+      "maximum inflammation for patient 2: 19.0\n",
+      "[ 0.          0.45        1.11666667  1.75        2.43333333  3.15\n",
+      "  3.8         3.88333333  5.23333333  5.51666667  5.95        5.9\n",
+      "  8.35        7.73333333  8.36666667  9.5         9.58333333 10.63333333\n",
+      " 11.56666667 12.35       13.25       11.96666667 11.03333333 10.16666667\n",
+      " 10.          8.66666667  9.15        7.25        7.33333333  6.58333333\n",
+      "  6.06666667  5.95        5.11666667  3.6         3.3         3.56666667\n",
+      "  2.48333333  1.5         1.13333333  0.56666667]\n",
+      "(40,)\n",
+      "[5.45  5.425 6.1   5.9   5.55  6.225 5.975 6.65  6.625 6.525 6.775 5.8\n",
+      " 6.225 5.75  5.225 6.3   6.55  5.7   5.85  6.55  5.775 5.825 6.175 6.1\n",
+      " 5.8   6.425 6.05  6.025 6.175 6.55  6.175 6.35  6.725 6.125 7.075 5.725\n",
+      " 5.925 6.15  6.075 5.75  5.975 5.725 6.3   5.9   6.75  5.925 7.225 6.15\n",
+      " 5.95  6.275 5.7   6.1   6.825 5.975 6.725 5.7   6.25  6.4   7.05  5.9  ]\n",
+      "(60,)\n"
      ]
     }
    ],
@@ -128,8 +144,49 @@
     "maxval, minval, stdval = numpy.amax(data), numpy.amin(data), numpy.std(data)\n",
     "print('maximum inflammation:', maxval)\n",
     "print('minimum inflammation:', minval)\n",
-    "print('standard deviation:', stdval)\n"
+    "print('standard deviation:', stdval)\n",
+    "\n",
+    "patient_0 = data[0, :] # 0 on the first axis (rows) and everything in the column)\n",
+    "print('maximum inflammation for patient 0:', numpy.amax(patient_0))\n",
+    "\n",
+    "# We don't need a row of variables on its own to do that. \n",
+    "print('maximum inflammation for patient 2:', numpy.amax(data[2, :]))\n",
+    "\n",
+    "# Get the maximum inflammation for each patient over all days (average of each row)\n",
+    "print(numpy.mean(data, axis=0)) # axis 0 is the rows \n",
+    "print(numpy.mean(data, axis=0).shape) # tells us there are 40 averages from 40 rows\n",
+    "print(numpy.mean(data, axis=1))\n",
+    "print(numpy.mean(data, axis=1).shape) # 60 averages from 60 columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oxy\n",
+      "xyge\n",
+      "gen\n"
+     ]
+    }
+   ],
+   "source": [
+    "element = 'oxygen'\n",
+    "print(element[0:3]) # first 3 letters of oxygen\n",
+    "print(element[1:-1]) # oxygen with the first and last index removed\n",
+    "print(element[-3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
