finished analysing pt data portion

--- a/analyse-patient-data.ipynb
+++ b/analyse-patient-data.ipynb
@@ -183,10 +183,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A = \n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "B = \n",
+      "[[1 2 3 1 2 3]\n",
+      " [4 5 6 4 5 6]\n",
+      " [7 8 9 7 8 9]]\n",
+      "C = \n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]\n",
+      " [1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "D = \n",
+      "[[1 3]\n",
+      " [4 6]\n",
+      " [7 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Stacking arrays \n",
+    "import numpy \n",
+    "\n",
+    "A = numpy.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "print('A = ')\n",
+    "print(A)\n",
+    "\n",
+    "B = numpy.hstack([A, A])\n",
+    "print('B = ')\n",
+    "print(B)\n",
+    "\n",
+    "C = numpy.vstack([A, A])\n",
+    "print('C = ')\n",
+    "print(C)\n",
+    "\n",
+    "D = numpy.hstack((A[:, :1], A[:, -1:]))\n",
+    "print('D = ')\n",
+    "print(D)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 2. 0. 4. 2. 2.]\n",
+      "[[ 0.  1.  2. -2.  1.  2.]\n",
+      " [ 1.  1. -1.  1. -1.  2.]\n",
+      " [ 1.  0.  2.  0. -1.  4.]\n",
+      " [ 0.  2. -2.  4. -2.  0.]\n",
+      " [ 1.  0.  2.  0. -2.  2.]\n",
+      " [ 0.  1.  1.  0.  2. -2.]\n",
+      " [ 0.  2.  0.  2. -2.  0.]\n",
+      " [ 0.  1.  1.  1. -2.  1.]\n",
+      " [ 0.  0.  3. -2.  4.  1.]\n",
+      " [ 1.  0.  1. -1.  2.  2.]\n",
+      " [ 1. -1.  0.  4. -1.  0.]\n",
+      " [ 1. -1.  0.  3.  1. -2.]\n",
+      " [ 0.  2. -1.  3. -1.  3.]\n",
+      " [ 0.  0.  0.  1.  2. -2.]\n",
+      " [ 1.  1. -1.  0.  0.  3.]\n",
+      " [ 1.  0. -1.  1.  1.  2.]\n",
+      " [ 0.  0.  0.  2.  1.  3.]\n",
+      " [ 0.  0.  1.  1. -1.  3.]\n",
+      " [ 0.  2. -1.  1.  3. -1.]\n",
+      " [ 1.  1. -2.  1.  3. -1.]\n",
+      " [ 1.  0.  2. -2.  3.  0.]\n",
+      " [ 0.  2.  1. -1.  1. -1.]\n",
+      " [ 0.  0.  3.  1.  1. -4.]\n",
+      " [ 1.  0.  0.  0.  2.  0.]\n",
+      " [ 1.  0.  0.  1.  1.  2.]\n",
+      " [ 0.  2. -1.  2.  0. -1.]\n",
+      " [ 0.  1.  1.  2. -2.  0.]\n",
+      " [ 0.  1.  0.  0.  4. -4.]\n",
+      " [ 0.  2.  0.  1.  1.  2.]\n",
+      " [ 0.  0.  1.  3.  0.  2.]\n",
+      " [ 1.  0. -1.  3. -1.  2.]\n",
+      " [ 0.  2.  1.  0.  1.  1.]\n",
+      " [ 1.  1.  0.  0.  1.  3.]\n",
+      " [ 0.  2. -1.  2.  2.  1.]\n",
+      " [ 0.  1.  1.  2. -3.  4.]\n",
+      " [ 0.  0.  3. -2.  2.  3.]\n",
+      " [ 1.  1.  0.  0.  3.  0.]\n",
+      " [ 1.  0.  1.  1. -2.  4.]\n",
+      " [ 1. -1.  3. -1.  2. -3.]\n",
+      " [ 1.  0.  2. -2.  0.  4.]\n",
+      " [ 0.  0.  2.  0. -1.  2.]\n",
+      " [ 0.  1.  2.  0. -2.  1.]\n",
+      " [ 1.  0.  2.  1.  1. -3.]\n",
+      " [ 0.  1.  2. -2.  3. -1.]\n",
+      " [ 1.  0.  2.  0.  1.  0.]\n",
+      " [ 1.  1.  0.  2. -1. -2.]\n",
+      " [ 0.  2.  1.  1.  1. -1.]\n",
+      " [ 1.  0.  2. -2.  3.  2.]\n",
+      " [ 0.  1.  2. -1.  3. -4.]\n",
+      " [ 0.  1.  1.  1.  1.  1.]\n",
+      " [ 1.  1. -1.  0.  2.  2.]\n",
+      " [ 1.  1.  0.  1.  2. -3.]\n",
+      " [ 0.  0.  2.  2.  0.  1.]\n",
+      " [ 0.  2. -1.  0.  3.  0.]\n",
+      " [ 1.  1. -1.  0.  3.  1.]\n",
+      " [ 0.  1.  2. -1.  1.  3.]\n",
+      " [ 1.  0.  1.  0.  3. -4.]\n",
+      " [ 1.  0.  0.  3. -3.  5.]\n",
+      " [ 0.  0.  1.  3.  1.  1.]\n",
+      " [ 0.  1. -1.  3. -1.  3.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([12., 14., 11., 13., 11., 13., 10., 12., 10., 10., 10., 12., 13.,\n",
+       "       10., 11., 10., 12., 13.,  9., 10., 13.,  9., 12.,  9., 12., 11.,\n",
+       "       10., 13.,  9., 13., 11., 11.,  8., 11., 12., 13.,  9., 10., 13.,\n",
+       "       11., 11., 13., 11., 13., 13., 10.,  9., 10., 10.,  9.,  9., 13.,\n",
+       "       10.,  9., 10., 11., 13., 10., 10., 12.])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change in inflammation \n",
+    "\n",
+    "patient3_week1 = data[3, :7]\n",
+    "print(patient3_week1)\n",
+    "numpy.diff(patient3_week1) # array shorter by one element\n",
+    "\n",
+    "# Find the difference for each patient \n",
+    "all_week1 = data[:,0:7]\n",
+    "print(numpy.diff(all_week1))\n",
+    "numpy.diff(all_week1).shape\n",
+    "\n",
+    "# Find the largest difference between days (biggest increase)\n",
+    "numpy.amax(numpy.diff(data, axis=1), axis=1)\n",
+    "\n",
+    "# Find the largest difference in magnitude, increase or decrease\n",
+    "numpy.amax(numpy.absolute(numpy.diff(data, axis=1)), axis=1)"
+   ]
   }
  ],
  "metadata": {
