started visualising tabular data notebook

--- a/analyse-patient-data.ipynb
+++ b/analyse-patient-data.ipynb
@@ -26,6 +26,7 @@
    ],
    "source": [
     "# requires you to install numpy first with 'pip3 install numpy' in terminal\n",
+    "# on mac I had to 'conda install numpy' in the conda environment\n",
     "import numpy\n",
     "\n",
     "data = numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')\n",
@@ -339,6 +340,13 @@
     "# Find the largest difference in magnitude, increase or decrease\n",
     "numpy.amax(numpy.absolute(numpy.diff(data, axis=1)), axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
