changes to errors and exceptions

--- a/9-errors-and-exceptions.ipynb
+++ b/9-errors-and-exceptions.ipynb
@@ -86,12 +86,41 @@
    "execution_count": 4
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-24T11:07:41.432233Z",
+     "start_time": "2025-03-24T11:07:40.586284Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "## Variable Name Errors\n",
+    "# Occurs when you use a variable that does not exist\n",
+    "print(a)"
+   ],
+   "id": "7eb747c30aba45fb",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m## Variable Name Errors\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;66;03m# Occurs when you use a variable that does not exist\u001B[39;00m\n\u001B[1;32m----> 3\u001B[0m \u001B[38;5;28mprint\u001B[39m(a)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "## Variable Name Errors\n",
-   "id": "7eb747c30aba45fb"
+   "source": "## Index Errors\n",
+   "id": "fc29e170d7c226f4"
   }
  ],
  "metadata": {
