finished errors and exceptions

--- a/9-errors-and-exceptions.ipynb
+++ b/9-errors-and-exceptions.ipynb
@@ -115,12 +115,124 @@
    "execution_count": 1
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-25T10:11:02.235973Z",
+     "start_time": "2025-03-25T10:11:01.282194Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "## Index Errors\n",
+    "# If you try to access an item in a list or string that does not exist\n",
+    "letters = ['a', 'b', 'c']\n",
+    "print('Letter #1 is', letters[0])\n",
+    "print('Letter #2 is', letters[1])\n",
+    "print('Letter #3 is', letters[2])\n",
+    "print('Letter #4 is', letters[3])"
+   ],
+   "id": "fc29e170d7c226f4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Letter #1 is a\n",
+      "Letter #2 is b\n",
+      "Letter #3 is c\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[2], line 7\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mLetter #2 is\u001B[39m\u001B[38;5;124m'\u001B[39m, letters[\u001B[38;5;241m1\u001B[39m])\n\u001B[0;32m      6\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mLetter #3 is\u001B[39m\u001B[38;5;124m'\u001B[39m, letters[\u001B[38;5;241m2\u001B[39m])\n\u001B[1;32m----> 7\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mLetter #4 is\u001B[39m\u001B[38;5;124m'\u001B[39m, letters[\u001B[38;5;241m3\u001B[39m])\n",
+      "\u001B[1;31mIndexError\u001B[0m: list index out of range"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-25T10:11:45.834150Z",
+     "start_time": "2025-03-25T10:11:45.719125Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "## File Errors\n",
+    "# If you try to read a file that cannot be found, error is FileNotFoundError\n",
+    "file_handle = open('myfile.txt', 'r')"
+   ],
+   "id": "c38fa40c603623fc",
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'myfile.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[3], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m## File Errors\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;66;03m# If you try to read a file that cannot be found, error is FileNotFoundError\u001B[39;00m\n\u001B[1;32m----> 3\u001B[0m file_handle \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mopen\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmyfile.txt\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mr\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "File \u001B[1;32m~\\.conda\\envs\\software-carpentry-1\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001B[0m, in \u001B[0;36m_modified_open\u001B[1;34m(file, *args, **kwargs)\u001B[0m\n\u001B[0;32m    317\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m file \u001B[38;5;129;01min\u001B[39;00m {\u001B[38;5;241m0\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m2\u001B[39m}:\n\u001B[0;32m    318\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m    319\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIPython won\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mt let you open fd=\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfile\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m by default \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    320\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    321\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124myou can use builtins\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m open.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    322\u001B[0m     )\n\u001B[1;32m--> 324\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m io_open(file, \u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n",
+      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'myfile.txt'"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
    "metadata": {},
    "cell_type": "code",
+   "source": [
+    "# Error example\n",
+    "for number in range(10):\n",
+    "    # use a if the number is a multiple of 3, otherwise use b\n",
+    "    if (Number % 3) == 0:\n",
+    "        message = message + a\n",
+    "    else:\n",
+    "        message = message + 'b'\n",
+    "print(message)\n",
+    "# number is misspelled, message not defined, and a is not in quotes. Fixed below:"
+   ],
+   "id": "4bae3aa9405ceff2",
    "outputs": [],
-   "execution_count": null,
-   "source": "## Index Errors\n",
-   "id": "fc29e170d7c226f4"
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-25T10:15:54.970548Z",
+     "start_time": "2025-03-25T10:15:54.965881Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "message = ''\n",
+    "for number in range(10):\n",
+    "    # use a if the number is a multiple of 3, otherwise use b\n",
+    "    if (number % 3) == 0:\n",
+    "        message = message + 'a'\n",
+    "    else:\n",
+    "        message = message + 'b'\n",
+    "print(message)"
+   ],
+   "id": "657cbcf3ae6857cd",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abbabbabba\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   }
  ],
  "metadata": {
